--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,14 @@
 
     <groupId>com.jtool</groupId>
     <artifactId>codegen-annotation</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
 
+    <distributionManagement>
+        <repository>
+            <id>jtool-maven-repository</id>
+            <name>Internal Repository</name>
+            <url>file://${project.basedir}/../jtool-mvn-repository/releases</url>
+        </repository>
+    </distributionManagement>
 
 </project>
