--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
 
     <groupId>com.jtool</groupId>
     <artifactId>codegen-annotation</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.5</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+    </dependencies>
 
     <distributionManagement>
         <repository>
